Completata bozza sezione temi caldi

--- a/index.html
+++ b/index.html
@@ -73,7 +73,37 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
   </header>
 
   <main>
+    <div id="main-container">
+      <section id="temi-caldi">
+        <span id="temi-caldi-caption">Temi caldi di oggi: </span>
+        <nav id="temi-caldi-list-container">
+          <ul id="temi-caldi-list">
+            <li>Tema 1</li>
+            <li>Tema 2</li>
+            <li>Tema 3</li>
+            <li>Tema 4</li>
+            <li>Tema 5</li>
+            <li>Tema 6</li>
+            <li>Tema 7</li>
+            <li>Tema 8</li>
+          </ul>
+        </nav>
+      </section>
+      <section id="corriere-tv-boxes">
+        <span>
+          <i>Corriere</i>TV
+        </span>
+      </section>
+      <section id="main-articles">
 
+      </section>
+      <section id="city-news">
+
+      </section>
+      <section id="world-news">
+
+      </section>
+    </div>
   </main>
 
   <footer>
