Completate bozze articoli laterali con sopra striscia CORRIERETV

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
         </nav>
       </section>
       <section id="corriere-tv-boxes">
-        <span class="carriere-tv-writing">
-          <i>Corriere</i>TV
+        <span id="corriere-tv-writing">
+          <i>CORRIERE</i>TV
         </span>
         <div id="corriere-tv-boxes-container">
           <article class="corriere-tv-box">
@@ -228,17 +228,58 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
                 </div>
               </div>
             </div>
+
+            <div id="secondary-article-container">
+              <span>
+                Lorem ipsum
+              </span>
+              <article id="secondary-article">
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  Praesent venenatis velit lectus, vitae imperdiet nibh tempor vel. Sed rutrum mauris vel mi ullamcorper
+                  dictum.
+                </h2>
+              </article>
+            </div>
           </div>
 
           <div id="articles-container-right">
             <div id="corriere-tv-right-first-article">
               <div id="corriere-tv-right-first-article-top-bar">
                 <img src="img/Arrow_Left.png" alt="freccia verso sinistra">
-                <span class>
+                <span class="corriere-tv-blue-box-writing">
                   <i>CORRIERE</i>TV
                 </span>
                 <img src="img/Arrow_Right.png" alt="freccia verso destra">
-              </div>corriere
+              </div>
+
+              <article>
+                <img src="img/Cicero_Corriere_Tv_Right_Side_Main_Articles.png" alt="placeholder">
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+              </article>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </div>
+
+            <div id="corriere-tv-right-second-article">
+              <div id="corriere-tv-right-second-article-top-bar">
+                <span class="corriere-tv-blue-box-writing">
+                <i>CORRIERE</i>TV
+              </span>
+              </div>
+
+              <article>
+                <img src="img/Cicero_Corriere_Tv_Right_Side_Main_Articles.png" alt="placeholder">
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+              </article>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
             </div>
           </div>
         </div>
