Completata bozza articolo generico

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
-              <ul id="main-article-additional-info-list">
+              <ul id="mian-article-additional-info-list">
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
@@ -239,7 +239,65 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
                   Praesent venenatis velit lectus, vitae imperdiet nibh tempor vel. Sed rutrum mauris vel mi ullamcorper
                   dictum.
                 </h2>
+                <figure>
+                  <img src="img/Cicero_Placeholder_Secondary_Article.png" alt="placeholder">
+                </figure>
               </article>
+              <span>
+                <i>di Lorem ipsum dolor sit amet</i>
+              </span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <ul id="secondary-article-additional-info-list">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
+              </ul>
+            </div>
+
+            <div class="generic-article-container">
+              <figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+              </figure>
+              <div class="generic-article-info-container">
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h3>
+                <span>
+                  <i>di Lorem ipsum dolor sit amet</i>
+                </span>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <ul class="generic-article-additional-info-list">
+                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="generic-article-container">
+              <figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+              </figure>
+              <div class="generic-article-info-container">
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h3>
+                <span>
+                  <i>di Lorem ipsum dolor sit amet</i>
+                </span>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <ul class="generic-article-additional-info-list">
+                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <i>di Lorem ipsum</i></li>
+                </ul>
+              </div>
+            </div>
+
+            <div>
+
             </div>
           </div>
 
