Completata bozza sezione frammenti

--- a/index.html
+++ b/index.html
@@ -296,7 +296,31 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               </div>
             </div>
 
-            <div>
+            <div id="frammenti-container">
+              <div id="frammenti-writing">
+                <span>
+                  Frammenti
+                </span>
+                <div id="frammenti-writing-underlying-lines">
+                </div>
+              </div>
+              <figure>
+                <img src="img" alt="placeholder">
+              </figure>
+              <div id="frammenti-title-and-attribution">
+                <h4>
+                  Lorem ipsum dolor sit amet
+                </h4>
+                <span>
+                  di Lorem Ipsum
+                </span>
+              </div>
+              <figure id="frammenti-hourglass-figure">
+                <img src="img/Hourglass.png" alt="hourglass" id="frammenti-hourglass-img">
+              </figure>
+            </div>
+
+            <div id>
 
             </div>
           </div>
