--- a/index.html
+++ b/index.html
@@ -320,8 +320,143 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               </figure>
             </div>
 
-            <div id>
+            <div id="three-articles-container">
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
 
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
+
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
+            </div>
+
+            <div id="four-articles-in-a-square">
+              <div id="four-articles-in-a-square-upper-articles">
+                <div id="coupled-articles-container">
+                  <div id="coupled-articles-left-article-container" class="coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                    <h2>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </h2>
+                    <div class="coupled-articles-image-and-comment-container">
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      </figure>
+                      <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div id="coupled-articles-right-article-container" class="coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                    <h2>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </h2>
+                    <div class="coupled-articles-image-and-comment-container">
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      </figure>
+                      <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="four-articles-in-a-square-lower-articles">
+                <div id="coupled-articles-container">
+                  <div id="coupled-articles-left-article-container">
+                    <span class="coupled-articles-top-writing">
+                    LOREM IPSUM
+                    </span>
+                    <h2>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </h2>
+                    <div class="coupled-articles-image-and-comment-container">
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      </figure>
+                      <div class="coupled-articles-image-comment-container">
+                        <span>
+                          di Lorem Ipsum
+                        </span>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                <div id="coupled-articles-right-article-container" class="coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                    <h2>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </h2>
+                    <div class="coupled-articles-image-and-comment-container">
+                      <figure>
+                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                      </figure>
+                      <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
