Completata bozza quattro articoli a quadrato

--- a/index.html
+++ b/index.html
@@ -361,98 +361,99 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               </div>
             </div>
 
+            <!--todo rinomina le classi dei tag-->
             <div id="four-articles-in-a-square">
               <div id="four-articles-in-a-square-upper-articles">
-                <div id="coupled-articles-container">
-                  <div id="coupled-articles-left-article-container" class="coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
-                  LOREM IPSUM
-                </span>
-                    <h2>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h2>
-                    <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      </figure>
-                      <div class="coupled-articles-image-comment-container">
+                <div id="four-articles-in-a-square-upper-articles-left-article-container"
+                class="coupled-articles-article-container">
+                  <span class="coupled-articles-top-writing">
+                    LOREM IPSUM
+                  </span>
+                  <h2>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h2>
+                  <div class="coupled-articles-image-and-comment-container">
+                    <figure>
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    </figure>
+                    <div class="coupled-articles-image-comment-container">
                     <span>
                       di Lorem Ipsum
                     </span>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                        </p>
-                      </div>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </p>
                     </div>
                   </div>
+                </div>
 
-                  <div id="coupled-articles-right-article-container" class="coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
-                  LOREM IPSUM
-                </span>
-                    <h2>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h2>
-                    <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      </figure>
-                      <div class="coupled-articles-image-comment-container">
+                <div id="four-articles-in-a-square-upper-articles-right-article-container"
+                class="coupled-articles-article-container">
+                  <span class="coupled-articles-top-writing">
+                    LOREM IPSUM
+                  </span>
+                  <h2>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h2>
+                  <div class="coupled-articles-image-and-comment-container">
+                    <figure>
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    </figure>
+                    <div class="coupled-articles-image-comment-container">
                     <span>
                       di Lorem Ipsum
                     </span>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                        </p>
-                      </div>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </p>
                     </div>
                   </div>
                 </div>
               </div>
 
               <div id="four-articles-in-a-square-lower-articles">
-                <div id="coupled-articles-container">
-                  <div id="coupled-articles-left-article-container">
-                    <span class="coupled-articles-top-writing">
+                <div id="four-articles-in-a-square-lower-articles-left-article-container"
+                class="coupled-articles-article-container">
+                  <span class="coupled-articles-top-writing">
                     LOREM IPSUM
-                    </span>
-                    <h2>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h2>
-                    <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      </figure>
-                      <div class="coupled-articles-image-comment-container">
-                        <span>
-                          di Lorem Ipsum
-                        </span>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-
-                <div id="coupled-articles-right-article-container" class="coupled-articles-article-container">
-                <span class="coupled-articles-top-writing">
-                  LOREM IPSUM
-                </span>
-                    <h2>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                    </h2>
-                    <div class="coupled-articles-image-and-comment-container">
-                      <figure>
-                        <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
-                      </figure>
-                      <div class="coupled-articles-image-comment-container">
+                  </span>
+                  <h2>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h2>
+                  <div class="coupled-articles-image-and-comment-container">
+                    <figure>
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    </figure>
+                    <div class="coupled-articles-image-comment-container">
                     <span>
                       di Lorem Ipsum
                     </span>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                        </p>
-                      </div>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div id="four-articles-in-a-square-lower-articles-right-article-container"
+                class="coupled-articles-article-container">
+                  <span class="coupled-articles-top-writing">
+                    LOREM IPSUM
+                  </span>
+                  <h2>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h2>
+                  <div class="coupled-articles-image-and-comment-container">
+                    <figure>
+                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                    </figure>
+                    <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                      </p>
                     </div>
                   </div>
                 </div>
