Completata bozza editoriali commenti

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
                 </div>
               </div>
               <figure>
-                <img src="img" alt="placeholder">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
               </figure>
               <div id="frammenti-title-and-attribution">
                 <h4>
@@ -498,6 +498,63 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </p>
+            </div>
+
+            <div id="editoriali-commenti">
+              <span>
+                EDITORIALI <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp"> COMMENTI
+              </span>
+              <div>
+                <hr>
+              </div>
+
+              <div class="editoriali-commenti-comment">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <div class="editoriali-commenti-comment-title-and-author">
+                  <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </h4>
+                  <p>
+                    di Lorem Ipsum
+                  </p>
+                </div>
+              </div>
+
+              <div class="editoriali-commenti-comment">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <div class="editoriali-commenti-comment-title-and-author">
+                  <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </h4>
+                  <p>
+                    di Lorem Ipsum
+                  </p>
+                </div>
+              </div>
+
+              <div class="editoriali-commenti-comment">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <div class="editoriali-commenti-comment-title-and-author">
+                  <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </h4>
+                  <p>
+                    di Lorem Ipsum
+                  </p>
+                </div>
+              </div>
+
+              <div class="editoriali-commenti-comment">
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="pfp">
+                <div class="editoriali-commenti-comment-title-and-author">
+                  <h4>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </h4>
+                  <p>
+                    di Lorem Ipsum
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
