Completate bozze articolo generico della parte destra degli articoli principali e sezione notizie città

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
           </div>
         </div>
 
-        <div id="articles-container">
-          <div id="articles-container-left">
-            <div id="coupled-articles-container">
-              <div id="coupled-articles-left-article-container" class="coupled-articles-article-container">
+        <div class="articles-container">
+          <div class="articles-container-left">
+            <div class="coupled-articles-container">
+              <div class="coupled-articles-left-article-container coupled-articles-article-container">
                 <span class="coupled-articles-top-writing">
                   LOREM IPSUM
                 </span>
@@ -206,7 +206,7 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
                 </div>
               </div>
 
-              <div id="coupled-articles-right-article-container" class="coupled-articles-article-container">
+              <div class="coupled-articles-right-article-container coupled-articles-article-container">
                 <span class="coupled-articles-top-writing">
                   LOREM IPSUM
                 </span>
@@ -556,12 +556,117 @@ e quelli a destra ma questo spazio deve diminuire al rimpicciolirsi della pagina
                 </div>
               </div>
             </div>
+
+            <div class="generic-article-container">
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
       <section id="city-news">
+        <div class="secondary-section-title-container">
+          <h4>
+            FIRENZE
+          </h4>
+          <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+        </div>
 
+        <div class="articles-container">
+          <div class="articles-container-left">
+            <div class="generic-article-container">
+              <figure>
+                <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="generic-article-placeholder">
+              </figure>
+              <div class="generic-article-info-container">
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h3>
+                <span>
+                  <i>di Lorem ipsum dolor sit amet</i>
+                </span>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
+
+            <div class="coupled-articles-container">
+              <div class="coupled-articles-left-article-container coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+                <div class="coupled-articles-image-and-comment-container">
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="coupled-articles-right-article-container coupled-articles-article-container">
+                <span class="coupled-articles-top-writing">
+                  LOREM IPSUM
+                </span>
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                </h2>
+                <div class="coupled-articles-image-and-comment-container">
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <div class="coupled-articles-image-comment-container">
+                    <span>
+                      di Lorem Ipsum
+                    </span>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="articles-container-right">
+            <div class="generic-article-container">
+              <div class="three-articles-article-container">
+                <p>Lorem ipsum</p>
+                <article>
+                  <figure>
+                    <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder">
+                  </figure>
+                  <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </h3>
+                </article>
+                <p>di Lorem Ipsum</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+
       <section id="world-news">
 
       </section>
